--- a/sass/layout/_userselect.scss
+++ b/sass/layout/_userselect.scss
@@ -42,7 +42,7 @@
     }
 
     @media screen and (min-width: $viewport-sm) {
-      margin: 20px 20px 20px 0;
+      margin: 20px 20px 0 0;
       width: 25%;
     }
   }
